testsuite/veronac/typechecking/compile-fail/invalid-field-write.out/stderr.txt
invalid-field-write.verona:10:5: error: Type '(Cell & imm(none))' is not writable
    cell.value = new A;
    ^~~~~~~~~~~~~~~~~~
invalid-field-write.verona:15:5: error: Type '((Cell & imm(none)) | (Cell & mut(external 0)))' is not writable
    cell.value = new A;
    ^~~~~~~~~~~~~~~~~~
invalid-field-write.verona:20:5: error: Type 'Cell' is not writable
    cell.value = new A;
    ^~~~~~~~~~~~~~~~~~
3 errors generated
